# pyroscope-profiling-demo

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml
dataset/: .gitignore  README.md  prepare_data.py
docker/grafana/provisioning/: dashboards.yml  datasources.yml
docker/prometheus/: prometheus.yml
docker/toxiproxy/: toxiproxy.json
docs/: demo_services.d2  demo_services_proxy.d2
loadtest/: locustfile.py
services/cook/: .gitignore  Dockerfile  Makefile  README.md  database.d2  go.mod  go.sum
services/cook/cmd/cook/: main.go
services/cook/cmd/cook/command/: create_restaurant.go  import.go  migrate.go  root.go  run.go
services/cook/cmd/cook/config/: config.go  logger.go  pyroscope_logger.go
services/cook/cmd/cook/data/: recipes.go  restaurant.go
services/cook/cmd/cook/http/api/: server.go  v1.go  v2.go
services/cook/cmd/cook/http/middleware/: logger.go
services/cook/cmd/cook/http/pprofiler/: server.go
services/cook/cmd/cook/importing/: recipes.go
services/cook/pkg/restaurant/: dish.go  ingredient.go  menu.go  model.go  restaurant.go  service.go
services/waiter/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/waiter/waiter/: api.py  api_route.py  config.py  logging.py  main.py  middleware.py
services/waiter/waiter/api/: models.py  router.py  router_v1.py  router_v2.py  router_v3.py
