[project]
name = "waiter"
dynamic = ["version"]

[tool.poetry]
name = "waiter"
version = "0.1.0"
description = "Pyroscope Demo Waiter"
authors = [
    "Frederic MARTIN <frederic@fgtech.fr>",
    "Aurélien TAMISIER <aurelien.tamisier+talks@flibidi.net>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyroscope-io = "0.8.8"
fastapi = "0.115.6"
uvicorn = { version = "0.32.1", extras = ["standard"] }
structlog = "^24.4.0"
asgi-correlation-id = "^4.3.4"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
