[project]
name = "waiter"
description = "Pyroscope Demo Waiter"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Frederic MARTIN", email = "frederic@fgtech.fr" },
    { name = "Aurélien TAMISIER", email = "aurelien.tamisier+talks@flibidi.net" },
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "pyroscope-io==0.8.11",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "structlog<26.0.0,>=25.4.0",
    "asgi-correlation-id<5.0.0,>=4.3.4",
    "requests<3.0.0,>=2.32.4",
]
